--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Nederland</h3>
                         <p>Amsterdam</p>
+                        <p>armandbissesar@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Social Media</h3>
